[metadata]
name = bigur.auth
url = https://bigur-auth.readthedocs.io/
download_url = https://github.com/bigur/auth
version = attr: src.VERSION
description = Async OpenID Connect server
long_description = file: README.md
keywords = asyncio, oauth2, oauth2-server, python-async-support, aiohttp, openid-connect, openid-connect-provider
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
scripts =
    bin/bigur-authd

[options.packages.find]
include =
    bigur.*

[options.data_files]
/etc/bigur =
    conf/auth.yaml
