[metadata]
name = bigur.auth
url = https://bigur-auth.readthedocs.io/
download_url = https://github.com/bigur/auth
version = attr: src.VERSION
description = Async OpenID Connect server
long_description = file: README.md
keywords = asyncio, oauth2, oauth2-server, python-async-support, aiohttp, openid-connect, openid-connect-provider
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
scripts =
    bin/bigur-authd

[options.packages.find]
include =
    bigur.*

[options.data_files]
/etc/bigur =
    conf/auth.yaml
/usr/share/bigur/auth/static =
    static/auth.css
    static/favicon.ico
/usr/share/bigur/auth/static/fonts/gilroy/woff =
    static/fonts/gilroy/woff/Gilroy-Bold.woff
    static/fonts/gilroy/woff/Gilroy-Regular.woff
/usr/share/bigur/auth/static/fonts/gilroy/woff2 =
    static/fonts/gilroy/woff2/Gilroy-Bold.woff2
    static/fonts/gilroy/woff2/Gilroy-Regular.woff2
/usr/share/bigur/auth/static/pix =
    static/pix/sign-b.png
/usr/share/bigur/auth/templates =
    templates/login_form.j2
    templates/main.j2
    templates/oidc_user_not_exists.j2
    templates/ok.html
    templates/registration_form.j2
